--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-youtube": "^7.11.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
   },
